frontend/.nx/cache/terminalOutputs/5042912889126680733
[0m[7m[1m[31m FAIL [39m[22m[27m[0m [0m[7m[37m admin-portal-feature-students [39m[27m[0m [2mlibs/admin-portal/feature-students/src/lib/data-access/[22m[1mstudent.service.spec.ts[22m
  [1m● [22mTest suite failed to run

    [1m[31mJest encountered an unexpected token[39m[22m

    Jest failed to parse a file. This happens e.g. when your code or its dependencies use non-standard JavaScript syntax, or when Jest is not configured to support such syntax.

    Out of the box Jest supports Babel, which will be used to transform your files into valid JS based on your Babel configuration.

    By default "node_modules" folder is ignored by transformers.

    Here's what you can do:
     • If you are trying to use ECMAScript Modules, see [4mhttps://jestjs.io/docs/ecmascript-modules[24m for how to enable it.
     • If you are trying to use TypeScript, see [4mhttps://jestjs.io/docs/getting-started#using-typescript[24m
     • To have some of your "node_modules" files transformed, you can specify a custom [1m"transformIgnorePatterns"[22m in your config.
     • If you need a custom transformation specify a [1m"transform"[22m option in your config.
     • If you simply want to mock your non-JS modules (e.g. binary assets) you can stub them out with the [1m"moduleNameMapper"[22m config option.

    You'll find more details and examples of these config options in the docs:
    [36mhttps://jestjs.io/docs/configuration[39m
    For information about custom transformations, see:
    [36mhttps://jestjs.io/docs/code-transformation[39m

    [1m[31mDetails:[39m[22m

    C:\Users\Amr\source\repos\SalahBahazad\New System\Salah bahzad\frontend\libs\admin-portal\feature-students\src\test-setup.ts:1
    ({"Object.<anonymous>":function(module,exports,require,__dirname,__filename,jest){import 'jest-preset-angular/setup-jest';
                                                                                      ^^^^^^

    SyntaxError: Cannot use import statement outside a module

      [2mat Runtime.createScriptFromCode ([22m../../../node_modules/jest-runtime/build/index.js[2m:1505:14)[22m

[1mTest Suites: [22m[1m[31m1 failed[39m[22m, 1 total
[1mTests:       [22m0 total
[1mSnapshots:   [22m0 total
[1mTime:[22m        1.835 s
[2mRan all test suites[22m[2m.[22m
